--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ body{
     grid-row-start: 2;
     grid-row-end: 3;
     padding: 20px 30px;
+    gap: 30px;
 }
 
 .column-1{
@@ -187,7 +188,7 @@ body{
     grid-column-end: 3;
     
 }
-.column-1 > p{
+.column-1 > p, #row-1 > p, #row-2 > p{
     font-size: 27px;
 }
 .your-projects{
@@ -202,15 +203,15 @@ body{
     padding: 20px 30px;
     border-radius: 10px;
     box-shadow: 3px 3px 7px #b9b9b9;
+    display: flex;
+    flex-direction: column;
 }
 .project p{
     font-family: 'Arial Narrow', Arial, sans-serif;
-    font-weight: 100;
+    font-weight: lighter;
+    flex-grow: 3;
+    margin: 0;
 }
-.column-2{
-    
-}
-
 
 .icons-container{
     display: flex;
@@ -226,4 +227,43 @@ body{
 .icons img{
     width: 30px;
     height: 30px;
+}
+
+h1{
+    font-size: 23px;
+}
+
+.column-2{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+#row-1{
+}
+
+#row-2{
+    background-color: mediumaquamarine;
+}
+.announcements{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px 30px;
+    box-shadow: 3px 3px 7px #b9b9b9;
+    gap: 15px;
+}
+.announcements-child p{
+    font-family: 'Arial Narrow', Arial, sans-serif;
+    font-weight: lighter;
+    font-size: 13px;
+    margin-top: 7px;
+    
+}
+.announcements-child h2{
+    font-size: 17px;
+    margin-bottom: 0;
+}
+
+.announcements-child:nth-child(1), .announcements-child:nth-child(2){
+    border-bottom: 1px solid var(--color-gray);
 }
